--- a/about.html
+++ b/about.html
@@ -111,6 +111,20 @@
           </div>
         </div>
 
+        <!-- New Our Values Section -->
+        <div class="row d-flex no-gutters mt-5">
+          <div class="col-md-6 d-flex">
+            <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end mb-4 mb-sm-0" style="background-image:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEotXpBZkFJ5bc4rANp3hJluqLNPjW0LLYYA&s');">
+            </div>
+          </div>
+          <div class="col-md-6 pl-md-5 py-md-5">
+            <div class="text">
+              <h3>Our Values</h3>
+              <p>We're strong enough to change things and committed enough to care about others. Our genuine passion and excitement for our work, along with our ability to quickly respond and adjust to client demands, have made us India's leading one-stop recruiting arena for international hiring.</p>
+            </div>
+          </div>
+        </div>
+
         <div class="row d-flex no-gutters mt-5">
           <div class="col-md-6 d-flex">
             <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end mb-4 mb-sm-0" style="background-image:url('https://t4.ftcdn.net/jpg/00/96/54/53/360_F_96545306_cX6N4Fv2TTVRMKahA3aoCvxlUOGm2KkV.jpg');">
