--- a/job.html
+++ b/job.html
@@ -39,7 +39,9 @@
 		<!-- Navbar from Galaxy Enterprises -->
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 			<div class="container">
-				<a class="navbar-brand" href="index.html">GALAXY <span>ENTERPRISES</span></a>
+				<a class="navbar-brand" href="index.html">
+					<img src="./images/Frame 51.png" alt="Galaxy Enterprises Logo" style="max-height: 100px; width: auto;">
+				</a>
 				<form action="#" class="searchform order-sm-start order-lg-last">
 					<div class="form-group d-flex">
 						<input type="text" class="form-control pl-3" placeholder="Search">
@@ -234,16 +236,13 @@
 			  </p>
 			</div>
 			<div class="col-md-4 mb-md-0 mb-4">
-			  <h2 class="footer-heading">Our Locations</h2>
-			  <p><strong>Kochi:</strong><br>
-				Pulimuootil Arcade, 2nd Floor,<br>
-				NH-47 Bypass, Near Prestige TMS Square,<br>
-				Edapally South, Kochi, Kerala - 682024</p>
-			  <p><strong>Thiruvananthapuram:</strong><br>
-				Springs Building, TC/44/913/1, Floor No. 1,<br>
-				Edappazhanji, Vazhuthacaud,<br>
-				Thiruvananthapuram, Kerala - 695014</p>
-			</div>
+				<h2 class="footer-heading">Our Locations</h2>
+				<p><strong>Calicut</strong><br>
+				   H.O: 13/1125 to 13/1127, PMK Tower, 2nd Floor,<br>
+					Civil Station (P.O),  - 673020
+				</p>
+				
+		</div>
 		  </div>
 		  <div class="row mt-md-5">
 			<div class="col-md-12">
