--- a/index.html
+++ b/index.html
@@ -13,6 +13,37 @@
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .faq-section {
+            background: #f8f9fa;
+            padding: 60px 0;
+        }
+        .faq-item {
+            background: white;
+            padding: 20px;
+            margin-bottom: 15px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        .faq-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.15);
+        }
+        .faq-question {
+            font-weight: 600;
+            color: #2c3e50;
+            margin-bottom: 10px;
+        }
+        .faq-answer {
+            color: #666;
+            display: none;
+        }
+        .faq-item.active .faq-answer {
+            display: block;
+        }
+    </style>
 </head>
 <body>
     <div class="wrap">
@@ -36,7 +67,9 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html">GALAXY <span>ENTERPRISES</span></a>
+            <a class="navbar-brand" href="index.html">
+                <img src="./images/Frame 51.png" alt="Galaxy Enterprises Logo" style="max-height: 100px; width: auto;">
+            </a>
             <form action="#" class="searchform order-sm-start order-lg-last">
                 <div class="form-group d-flex">
                     <input type="text" class="form-control pl-3" placeholder="Search">
@@ -365,9 +398,9 @@
                         <a href="job-details.html" class="block-20 rounded" style="background-image: url('images/image_1.jpg');"></a>
                         <div class="text mt-3">
                             <div class="meta mb-2">
-                                <div><a href="#"><i class="fas fa-calendar-alt mr-1"></i> April 5, 2025</a></div>
-                                <div><a href="#"><i class="fas fa-map-marker-alt mr-1"></i> Dubai, UAE</a></div>
-                                <div><a href="#" class="meta-tag"><span class="fas fa-tag mr-1"></span> Full-time</a></div>
+                                <div><a href="#"> April 5, 2025</a></div>
+                                <div><a href="#"> Dubai, UAE</a></div>
+                                <div><a href="#" class="meta-tag"> Full-time</a></div>
                             </div>
                             <h3 class="heading"><a href="#">Senior Software Engineer - JavaScript/React</a></h3>
                             <p>A leading tech company is seeking an experienced software engineer with 5+ years of experience in front-end development with React.js.</p>
@@ -386,9 +419,9 @@
                         <a href="job-details.html" class="block-20 rounded" style="background-image: url('images/image_2.jpg');"></a>
                         <div class="text mt-3">
                             <div class="meta mb-2">
-                                <div><a href="#"><i class="fas fa-calendar-alt mr-1"></i> April 3, 2025</a></div>
-                                <div><a href="#"><i class="fas fa-map-marker-alt mr-1"></i> Abu Dhabi, UAE</a></div>
-                                <div><a href="#" class="meta-tag"><span class="fas fa-tag mr-1"></span> Contract</a></div>
+                                <div><a href="#"> April 3, 2025</a></div>
+                                <div><a href="#"> Abu Dhabi, UAE</a></div>
+                                <div><a href="#" class="meta-tag"> Contract</a></div>
                             </div>
                             <h3 class="heading"><a href="#">HR Manager - Recruitment Specialist</a></h3>
                             <p>An international corporation is looking for an HR Manager with expertise in talent acquisition and employee development strategies.</p>
@@ -407,9 +440,9 @@
                         <a href="job-details.html" class="block-20 rounded" style="background-image: url('images/image_3.jpg');"></a>
                         <div class="text mt-3">
                             <div class="meta mb-2">
-                                <div><a href="#"><i class="fas fa-calendar-alt mr-1"></i> April 1, 2025</a></div>
-                                <div><a href="#"><i class="fas fa-map-marker-alt mr-1"></i> Sharjah, UAE</a></div>
-                                <div><a href="#" class="meta-tag"><span class="fas fa-tag mr-1"></span> Part-time</a></div>
+                                <div><a href="#"> April 1, 2025</a></div>
+                                <div><a href="#"> Sharjah, UAE</a></div>
+                                <div><a href="#" class="meta-tag"> Part-time</a></div>
                             </div>
                             <h3 class="heading"><a href="#">Marketing Specialist - Digital Campaigns</a></h3>
                             <p>A growing e-commerce company is hiring a Marketing Specialist to develop and manage digital marketing campaigns across multiple platforms.</p>
@@ -519,71 +552,112 @@
         </div>
     </section>
 
-    <footer class="footer">
-        <div class="container-fluid px-lg-5">
-            <div class="row">
-                <div class="col-md-9 py-5">
-                    <div class="row">
-                        <div class="col-md-4 mb-md-0 mb-4">
-                            <h2 class="footer-heading">About us</h2>
-                            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                            <ul class="ftco-footer-social p-0">
-                                <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
-                                <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
-                                <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-4 mb-md-0 mb-4">
-                            <h2 class="footer-heading">Contact Us</h2>
-                            <p><strong>Phone:</strong><br>
-                                +91 85901 72642<br>
-                            
-                        </div>
-                        <div class="col-md-4 mb-md-0 mb-4">
-                            <h2 class="footer-heading">Our Locations</h2>
-                            <p><strong>Kochi:</strong><br>
-                                Pulimuootil Arcade, 2nd Floor,<br>
-                                NH-47 Bypass, Near Prestige TMS Square,<br>
-                                Edapally South, Kochi, Kerala - 682024</p>
-                            <p><strong>Thiruvananthapuram:</strong><br>
-                                Springs Building, TC/44/913/1, Floor No. 1,<br>
-                                Edappazhanji, Vazhuthacaud,<br>
-                                Thiruvananthapuram, Kerala - 695014</p>
-                        </div>
-                    </div>
-                    <div class="row mt-md-5">
-                        <div class="col-md-12">
-                            <p class="copyright">
-                                Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="fa fa-heart" aria-hidden="true"></i> by <a href="" target="_blank">Nexonix</a>
-                            </p>
-                        </div>
-                    </div>
+    <section class="faq-section">
+        <div class="container">
+            <div class="row justify-content-center pb-5 mb-3">
+                <div class="col-md-8 heading-section text-center ftco-animate">
+                    <h2>Frequently Asked Questions</h2>
+                    <span class="subheading">Your Queries Answered</span>
                 </div>
-                <div class="col-md-3 py-md-5 py-4 aside-stretch-right pl-lg-5">
-                    <h2 class="footer-heading">Free consultation</h2>
-                    <form action="#" class="form-consultation">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Your Name">
+            </div>
+            <div class="row">
+                <div class="col-md-10 mx-auto">
+                    <div class="faq-item">
+                        <div class="faq-question">How long does the visa process take?</div>
+                        <div class="faq-answer">
+                            The visa processing time varies depending on the country and type of visa. Typically, it can take anywhere from 2 weeks to 3 months. Our team works to expedite the process wherever possible.
                         </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Your Email">
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">What documents are required for job applications?</div>
+                        <div class="faq-answer">
+                            You'll need a valid passport, updated resume, educational certificates, experience letters, and any specific documents required by the employer or country. We provide a detailed checklist for each case.
                         </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Subject">
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">Do you guarantee job placement?</div>
+                        <div class="faq-answer">
+                            While we have a 98% success rate, placement depends on various factors including your qualifications and employer requirements. We guarantee dedicated support throughout the process.
                         </div>
-                        <div class="form-group">
-                            <textarea name="" id="" cols="30" rows="3" class="form-control" placeholder="Message"></textarea>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">What are your service fees?</div>
+                        <div class="faq-answer">
+                            Our fees vary based on the service type (visa processing, recruitment, etc.). We offer transparent pricing and will provide a detailed quote after your free consultation.
                         </div>
-                        <div class="form-group">
-                            <button type="submit" class="form-control submit px-3">Send A Message</button>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">Can you help with family visas?</div>
+                        <div class="faq-answer">
+                            Yes, we assist with dependent and family visas alongside work visas. Contact us for specific requirements based on your destination country.
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </footer>
+    </section>
 
-    <!-- loader -->
+    <footer class="footer">
+        <div class="container-fluid px-lg-5">
+          <div class="row">
+            <div class="col-md-9 py-5">
+              <div class="row">
+                <div class="col-md-4 mb-md-0 mb-4">
+                  <h2 class="footer-heading">About us</h2>
+                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                  <ul class="ftco-footer-social p-0">
+                    <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
+                    <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
+                    <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a></li>
+                  </ul>
+                </div>
+                <div class="col-md-4 mb-md-0 mb-4">
+                  <h2 class="footer-heading">Contact Us</h2>
+                  <p><strong>Phone:</strong><br>
+                    +91 85901 72642<br>
+                  </p>
+                </div>
+                <div class="col-md-4 mb-md-0 mb-4">
+                  <h2 class="footer-heading">Our Locations</h2>
+                  <p><strong>Calicut</strong><br>
+                     H.O: 13/1125 to 13/1127, PMK Tower, 2nd Floor,<br>
+                      Civil Station (P.O),  - 673020
+                  </p>
+                  
+          </div>
+              </div>
+              <div class="row mt-md-5">
+                <div class="col-md-12">
+                  <p class="copyright">
+                    Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="fa fa-heart" aria-hidden="true"></i> by <a href="" target="_blank">Nexonix</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 py-md-5 py-4 aside-stretch-right pl-lg-5">
+              <h2 class="footer-heading">Free consultation</h2>
+              <form action="#" class="form-consultation">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Your Name">
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Your Email">
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Subject">
+                </div>
+                <div class="form-group">
+                  <textarea name="" id="" cols="30" rows="3" class="form-control" placeholder="Message"></textarea>
+                </div>
+                <div class="form-group">
+                  <button type="submit" class="form-control submit px-3">Send A Message</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </footer>
+
     <div id="ftco-loader" class="show fullscreen">
         <svg class="circular" width="48px" height="48px">
             <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
@@ -605,5 +679,13 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.faq-item').click(function() {
+                $(this).toggleClass('active');
+                $(this).find('.faq-answer').slideToggle(300);
+            });
+        });
+    </script>
 </body>
 </html>
